cmake_minimum_required(VERSION 2.8)
#SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
set (CMAKE_CXX_STANDARD 11)
project(aruco_testproject)
SET(CMAKE_MODULE_PATH ${CMAKE_INSTALL_PREFIX}/lib/cmake/ )
find_package(aruco REQUIRED )
add_executable(rocket rocket.cpp)
add_executable(g generator.cpp)
add_executable(mask mask.cpp)
target_link_libraries(rocket ${aruco_LIBS})
target_link_libraries(g ${aruco_LIBS})
target_link_libraries(mask ${aruco_LIBS})
